# camera_aravis

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
calibration/photoneo/motioncam_m_plus/: ColorCameraRangeExtrinsics.launch  ColorCamera_Resolution_1288x730.yaml  ColorCamera_Resolution_1932x1096.yaml  ColorCamera_Resolution_3864x2192.yaml  Range.yaml  Range_Camera.yaml  Range_Scanner.yaml
cfg/: CameraAravis.cfg
include/camera_aravis/: camera_aravis_nodelet.h  conversion_utils.h
launch/: camera_aravis.launch  multisource_camera_aravis.launch  photoneo_motioncam.launch  photoneo_motioncam_raw_rgb.launch  photoneo_motioncam_scanner.launch
src/: camera_aravis_nodelet.cpp  camera_buffer_pool.cpp  conversion_utils.cpp
